# smolbar

./: CHANGELOG.md  Cargo.toml  README.md  default.nix  deny.toml  release-checklist.md  shell.nix
doc/: .gitignore  COPYRIGHT  Makefile  smolbar.1.scd  smolbar.5.scd
docs/: COPYRIGHT  Makefile  smolbar.1.scd  smolbar.5.scd
examples/: config.toml  test.toml
examples/blocks/: load_average.sh  memory.sh  memory_mem.sh  memory_swap.sh
src/: bar.rs  block.rs  blocks.rs  config.rs  error.rs  lib.rs  logger.rs  main.rs  protocol.rs  runtime.rs
