[package]
name = "smolbar"
version = "0.8.2"
authors = ["Ula Shipman <ula.hello@mailbox.org>"]
edition = "2021"
rust-version = "1.66.1"
description = "smol status command for sway"
homepage = "https://crates.io/crates/smolbar"
repository = "https://github.com/ulahello/smolbar"
license = "GPL-3.0-or-later"
keywords = ["sway", "swaybar"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = { version = "1.0.75", default-features = false, features = ["std"] }
argh = { version = "0.1.12", default-features = false }
libc = { version = "0.2.151", default-features = false }
nu-ansi-term = { version = "0.49.0", default-features = false }
semver = { version = "1.0.20", default-features = false, features = ["serde"] }
serde = { version = "1.0.193", default-features = false }
serde_derive = { version = "1.0.193", default-features = false }
serde_json = { version = "1.0.108", default-features = false, features = ["std"] }
signal-hook-registry = { version = "1.4.1", default-features = false }
tokio = { version = "1.35.0", default-features = false, features = ["time", "signal", "process", "sync", "rt", "macros"] }
tokio-util = { version = "0.7.10", default-features = false }
toml = { version = "0.8.2", default-features = false, features = ["parse", "preserve_order"] }
tracing = { version = "0.1.40", default-features = false, features = ["attributes"] }
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["ansi"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
