[package]
name = "smolbar"
version = "0.8.4"
authors = ["Ula Shipman <ula.hello@mailbox.org>"]
edition = "2021"
rust-version = "1.67.1"
description = "smol status command for sway"
homepage = "https://crates.io/crates/smolbar"
repository = "https://github.com/ulahello/smolbar"
license = "GPL-3.0-or-later"
keywords = ["sway", "swaybar"]
categories = ["command-line-utilities"]

[badges.maintenance]
status = "as-is"

[dependencies]
anyhow = { version = "1.0.97", default-features = false, features = ["std"] }
argh = { version = "0.1.13", default-features = false }
cowstr = { version = "1.2.0", features = ["serde"] }
libc = { version = "0.2.170", default-features = false }
semver = { version = "1.0.26", default-features = false, features = ["serde"] }
serde = { version = "1.0.218", default-features = false }
serde_derive = { version = "1.0.218", default-features = false }
serde_json = { version = "1.0.140", default-features = false, features = ["std"] }
signal-hook-registry = { version = "1.4.2", default-features = false }
tokio = { version = "1.38.1", default-features = false, features = ["time", "signal", "process", "sync", "rt", "macros"] }
tokio-util = { version = "0.7.11", default-features = false }
toml = { version = "0.8.20", default-features = false, features = ["parse", "preserve_order"] }
tracing = { version = "0.1.41", default-features = false, features = ["attributes"] }
tracing-subscriber = { version = "0.3.19", default-features = false, features = ["ansi"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
